--- a/config.toml
+++ b/config.toml
@@ -114,7 +114,7 @@ media_prefix = "http://advancetechmedia.org/"
         twitter = "Alexandra933"
         linkedin = "alexandra-moxin"
         facebook = "alexandra.moxin"
-        github = "lexi933"knowledge
+        github = "lexi933"
         instagram = "lexi_933/?hl=en"
         medium = "https://medium.com/@Cnecct"
 
