--- a/config.toml
+++ b/config.toml
@@ -44,7 +44,7 @@ themesdir = "themes"
 
 #[[Menu.Main]]
 #    name = "Syndicate"
-#    identifier = "syndicatedpodcasts"
+#    identifier = "syndicate"
 #    url = "syndicate"
 
 [params]
@@ -63,13 +63,13 @@ soundcloud_subscribe = "https://soundcloud.com/user-716837148"
 pocketcasts_subscribe = "https://play.pocketcasts.com/web#/podcasts/show/8e189720-0f3b-0135-ecbb-4114446340cb"
 #mailchimp_subscribe = "//arresteddevops.us3.list-manage.com/subscribe/post?u=5e4cbcac996bb9df25f970a89&amp;id=154fa76bcc"
 #rss_subscribe = "http://feed.com/myfeed" #only set this if you don't want to use the built-in feed
-description = "<p>The Advance Tech Podcast provides a spotlight for innovative and disruptive initiatives and features guests building the technology of tomorrow. Hosted by Alexandra Moxin and Adam Dymitruk. </p><p>Advance Tech Media is dedicated to advancing research and supporting the responsible application of bleeding edge technology and practices that foster quality, equality and sustainability.</p><p>Subscribe below and check out our brand new [commercial site](https://advancetechmedia.com/)"
+description = "<p>The Advance Tech Podcast provides a spotlight for innovative and disruptive initiatives and features guests building the technology of tomorrow. Hosted by Alexandra Moxin and Adam Dymitruk.</p><p>We connect you to founders, developers and influencers from around the globe who give our audience insight into what it takes to massively scale from great idea to leading industry maker.</p><p>Subscribe below and check out our brand new [commercial site](https://advancetechmedia.com/)"
 media_prefix = "http://advancetechmedia.org/"
   [params.feed]
     feed_copyright = "Copyright 2017 - 2018 Advance Tech Media" #do not use markdown in this field; it is used in the feed
     itunes_subtitle = "Featuring people who are passionate about making the world a better place and pushing the boundaries of innovation." #no markdown or HTML
     itunes_author = "Alexandra Moxin" #no markdown or HTML
-    itunes_summary = "The Advance Tech Podcast brings you the latest in bleeding edge technology, and insight into free and open source projects you won’t hear in the mainstream media. Hosted by Alexandra Moxin and Adam Dymitruk. We aim to give you the unbiased truth and interview guests who are defining the technology of tomorrow." # Limited to 4000 characters or less, plain text, no HTML
+    itunes_summary = "The Advance Tech Podcast brings you the latest in bleeding edge technology and features guests building the technology of tomorrow. We connect you to founders, developers and influencers from around the globe who give our audience insight into what it takes to massively scale from great idea to leading industry maker. Hosted by Alexandra Moxin and Adam Dymitruk." # Limited to 4000 characters or less, plain text, no HTML
     itunes_owner_name = "Advance Tech Media"
     itunes_owner_email = "alexandra.moxin@advancetechmedia.org" #contains the e-mail address that will be used to contact the owner of the Podcast for communication specifically about their Podcast on iTunes. It will not be publicly displayed on iTunes.
     itunes_image = "http://advancetechmedia.org/img/advancetechmediaavataritunes.png" #fqdn to the image art for your podcast
