--- a/config.toml
+++ b/config.toml
@@ -97,7 +97,7 @@ description = "<p>The Advance Tech Podcast provides a spotlight for innovative a
     [params.authors.Adam]
       name	= "Adam Dymitruk"
       thumbnail = "img/host/adam-2016-small-square.png"
-      bio = "CEO and Founder of Adaptech Solutions, and co-host of the Advance Tech Podcast, Adam is a passionate technologist and has worked in the field for a few decades in numerous roles. He has contributed to the scaling approaches in CQRS and Event Sourcing by introducing PAXOS to the consistency strategy in 2008. In 2011-2012, he helped Microsoft's Patterns and Practices team introduce modern open-source tooling to the CQRS Journey book project. He has inspired organisations to excel in modern software development workflows, inspired a culture of learning and instilled a modern approach to software architecture."
+      bio = "CEO and Founder of Adaptech Group, and co-host of the Advance Tech Podcast, Adam is a passionate technologist and has worked in the field for a few decades in numerous roles. He has contributed to the scaling approaches in CQRS and Event Sourcing by introducing PAXOS to the consistency strategy in 2008. In 2011-2012, he helped Microsoft's Patterns and Practices team introduce modern open-source tooling to the CQRS Journey book project. He has inspired organisations to excel in modern software development workflows, inspired a culture of learning and instilled a modern approach to software architecture."
       [params.authors.Adam.social]
         github = "adymitruk"
         twitter = "adymitruk"
