--- a/config.toml
+++ b/config.toml
@@ -97,7 +97,7 @@ description = "<p>The Advance Tech Podcast provides a spotlight for innovative a
     [params.authors.Adam]
       name	= "Adam Dymitruk"
       thumbnail = "img/host/adam-2016-small-square.png"
-      bio = "CEO and Founder of Adaptech Solutions, and co-host of the Advance Tech Podcast, Adam is a passionate technologist and has worked in the field for a few decades in numerous roles. He has contributed to the scaling approaches in CQRS and Event Sourcing by introducing PAXOS to the consistency strategy in 2008. In 2011-2012, he helped Microsoft's Patterns and Practices team introduce modern open-source tooling to the CQRS Journey book project. He has inspired organisations to excel in modern software development workflows, inspired a culture of learning and instilled a modern approach to software architecture."
+      bio = "<p>CEO and Founder of Adaptech Group, and Co-host of the Advance Tech Podcast, Adam is a pioneer in the event sourcing space. He founded and uses the Event Modelling approach for designing and building information systems and worked with Greg Young on one of the earliest event sourcing projects in 2007 to 2008.</p><p>Adam contributed to the scaling approaches in CQRS and Event Sourcing by introducing PAXOS to the consistency strategy in 2008. In 2011 to 2012, he helped Microsoft's Patterns and Practices team introduce modern open-source tooling to the CQRS Journey book project. He has inspired organisations to excel in modern software development workflows, inspired a culture of learning and instilled a modern approach to software architecture.</p>"
       [params.authors.Adam.social]
         github = "adymitruk"
         twitter = "adymitruk"
@@ -110,7 +110,7 @@ description = "<p>The Advance Tech Podcast provides a spotlight for innovative a
     [params.authors.Alex]
       name = "Alexandra Moxin"
       thumbnail = "img/host/Alex1.jpg"
-      bio = "<p>Founder and CEO of Advance Tech Media and Host of the Advance Tech Podcast, Alexandra is dedicated to advancing the research and responsible application of bleeding edge technology and in just over a year has grown a global audience base to 1M listens. Alexandra advises companies in the Blockchain space and speaks about Bitcoin and why Blockchain is not a solution for every project.</p><p>Alexandra is the CoFounder and President of a digital services company working on a distributed social networking platform currently operating in stealth mode. Alexandra is developing her experience in the field of Artificial Intelligence and Machine Learning and has given talks at conferences and for private groups both nationally and internationally. She is a strong proponent of open source communities.</p>"
+      bio = "<p>Founder and CEO of Advance Tech Media and Host of the Advance Tech Podcast. Alexandra is dedicated to advancing the research and responsible application of bleeding edge technology and in just over a year has grown a global audience base to 1M listens. Alexandra advises companies in the Bitcoin and Blockchain space and speaks about why Blockchain is not a solution for every project.</p><p>Alexandra is the CoFounder and President of a digital services company working on a distributed social networking platform currently operating in stealth mode. She is developing her experience in the field of Artificial Intelligence and Machine Learning and has given talks at conferences and for private groups both nationally and internationally.</p>"
 
 
 
