--- a/config.toml
+++ b/config.toml
@@ -52,6 +52,7 @@ themesdir = "themes"
 site_theme = "blue"
 site_layout = "row"
 enable_jumbo = "true"
+custom_css = ["css/custom.css"]
 #truncate = "100"
 about_logo = "/img/Advancetechmedia avatar.png"
 media_prefix = "http://advancetechmedia.org/"
@@ -61,7 +62,7 @@ itunes_subscribe = "https://itunes.apple.com/ca/podcast/advance-tech-podcast/id1
 android_subscribe = "http://www.subscribeonandroid.com/advancetechmedia.org/episode/index.xml"
 google_play_subscribe = "https://play.google.com/music/listen?u=0#/ps/Ixpkgrijhidwwxqyz4qwfh4azhm"
 sticher_subscribe = "https://www.stitcher.com/s?fid=356388&refid=stpr"
-soundcloud_subscribe = "https://soundcloud.com/user-716837148"
+#soundcloud_subscribe = "https://soundcloud.com/user-716837148"
 pocketcasts_subscribe = "https://play.pocketcasts.com/web#/podcasts/show/8e189720-0f3b-0135-ecbb-4114446340cb"
 #mailchimp_subscribe = "//arresteddevops.us3.list-manage.com/subscribe/post?u=5e4cbcac996bb9df25f970a89&amp;id=154fa76bcc"
 #rss_subscribe = "http://feed.com/myfeed" #only set this if you don't want to use the built-in feed
