--- a/config.toml
+++ b/config.toml
@@ -55,11 +55,11 @@ enable_jumbo = "true"
 custom_css = ["css/custom.css"]
 #truncate = "100"
 about_logo = "/img/Advancetechmedia avatar.png"
-media_prefix = "http://advancetechmedia.org/"
+media_prefix = "https://advancetechmedia.org/"
 
 copyright_notice = "Copyright 2017 - 2019 [Advance Tech Media](https://.advancetechmedia.org)"
 itunes_subscribe = "https://itunes.apple.com/ca/podcast/advance-tech-podcast/id1278222771"
-android_subscribe = "http://www.subscribeonandroid.com/advancetechmedia.org/episode/index.xml"
+android_subscribe = "https://www.subscribeonandroid.com/advancetechmedia.org/episode/index.xml"
 google_play_subscribe = "https://play.google.com/music/listen?u=0#/ps/Ixpkgrijhidwwxqyz4qwfh4azhm"
 stitcher_subscribe = "https://www.stitcher.com/s?fid=356388&refid=stpr"
 spotify_subscribe = "https://open.spotify.com/show/4W4Lptk0ENfh7Wc1LKL3Zu"
