--- a/config.toml
+++ b/config.toml
@@ -57,7 +57,7 @@ custom_css = ["css/custom.css"]
 about_logo = "/img/Advancetechmedia avatar.png"
 media_prefix = "https://advancetechmedia.org/"
 
-copyright_notice = "Copyright 2017 - 2019 [Advance Tech Media](https://.advancetechmedia.org)"
+copyright_notice = "Copyright 2017 - 2020 [Advance Tech Media](https://.advancetechmedia.org)"
 itunes_subscribe = "https://itunes.apple.com/ca/podcast/advance-tech-podcast/id1278222771"
 android_subscribe = "https://www.subscribeonandroid.com/advancetechmedia.org/episode/index.xml"
 google_play_subscribe = "https://play.google.com/music/listen?u=0#/ps/Ixpkgrijhidwwxqyz4qwfh4azhm"
@@ -66,7 +66,7 @@ spotify_subscribe = "https://open.spotify.com/show/4W4Lptk0ENfh7Wc1LKL3Zu"
 pocketcasts_subscribe = "https://play.pocketcasts.com/web#/podcasts/show/8e189720-0f3b-0135-ecbb-4114446340cb"
 #mailchimp_subscribe = "//arresteddevops.us3.list-manage.com/subscribe/post?u=5e4cbcac996bb9df25f970a89&amp;id=154fa76bcc"
 #rss_subscribe = "http://feed.com/myfeed" #only set this if you don't want to use the built-in feed
-description = "<p>The Advance Tech Podcast provides a spotlight for innovative and disruptive initiatives and features guests building the technology of tomorrow. Hosted by Alexandra Moxin and Adam Dymitruk.</p><p>We connect you to founders, developers and leaders from around the globe who give our audience insight into what it takes to massively scale from great idea to leading industry maker.</p><p>Subscribe and check out our [commercial site](https://www.advancetechmedia.com/)"
+description = "<p>The Advance Tech Podcast provides a spotlight for innovative and disruptive initiatives and features guests building the technology of tomorrow. Hosted by Alexandra Moxin and Adam Dymitruk.</p><p>We connect you to founders, developers and leaders from around the globe who give our audience insight into what it takes to massively scale from great idea to leading industry maker.</p><p>Subscribe from our homepage and check out our [commercial site](https://www.advancetechmedia.com/)"
   [params.feed]
     feed_copyright = "Copyright 2017 - 2019 Advance Tech Media" #do not use markdown in this field; it is used in the feed
     itunes_subtitle = "The voice of innovation and the tech of tomorrow." #no markdown or HTML
@@ -98,20 +98,20 @@ description = "<p>The Advance Tech Podcast provides a spotlight for innovative a
     [params.authors.Adam]
       name	= "Adam Dymitruk"
       thumbnail = "img/host/adam-2016-small-square.png"
-      bio = "<p>CEO and Founder of Adaptech Group, and Co-host of the Advance Tech Podcast, Adam is a pioneer in the event sourcing space. He founded and uses the Event Modelling approach for designing and building information systems and worked with Greg Young on one of the earliest event sourcing projects in 2007 to 2008.</p><p>Adam contributed to the scaling approaches in CQRS and Event Sourcing by introducing PAXOS to the consistency strategy in 2008. In 2011 to 2012, he helped Microsoft's Patterns and Practices team introduce modern open-source tooling to the CQRS Journey book project. He has inspired organisations to excel in modern software development workflows, inspired a culture of learning and instilled a modern approach to software architecture.</p>"
+      bio = "<p>CEO and Founder of Adaptech Group, and Co-host of the Advance Tech Podcast, Adam is a pioneer in the event sourcing space. He founded the Event Modelling approach for designing and building information systems and is a core contributor to one of the earliest event sourcing projects in 2007 to 2008. He inspires organisations to excel in modern software development, a culture of learning and modern approaches to software architecture.</p>"
       [params.authors.Adam.social]
         github = "adymitruk"
         twitter = "adymitruk"
         linkedin = "eventsourcing"
         facebook = "adymitruk"
-        homepage = "https://www.adaptechsolutions.net/about"
+        homepage = "https://www.adaptechgroup.com"
         #pinterest = "mattstratton"
-        #instagram = "instagram"
+        instagram = "adamdymitruk"
         youtube = "adaptech"
-    [params.authors.Alex]
+    [params.authors.1Alex]
       name = "Alexandra Moxin"
       thumbnail = "img/host/Alex1.jpg"
-      bio = "<p>Founder and CEO of Advance Tech Media and Host of the Advance Tech Podcast. Alexandra is dedicated to advancing the research and responsible application of bleeding edge technology and in just over a year has grown a global audience base to 1M listens. Alexandra advises companies in the Bitcoin and Blockchain space and speaks about why Blockchain is not a solution for every project.</p><p>Alexandra is the CoFounder and President of a digital services company working on a distributed social networking platform currently operating in stealth mode. She is developing her experience in the field of Artificial Intelligence and Machine Learning and has given talks at conferences and for private groups both nationally and internationally.</p>"
+      bio = "<p>CEO and Founder of Advance Tech Media and Host of the Advance Tech Podcast Alexandra interviews founders, developers and leaders from around the globe shining a light on what it takes to massively scale from great idea to leading industry maker. She speaks at conferences and for private groups in Canada and internationally on Artificial Intelligence/Machine Learning, Bitcoin and other emerging technologies.</p>"
 
 
 
@@ -121,7 +121,9 @@ description = "<p>The Advance Tech Podcast provides a spotlight for innovative a
         facebook = "alexandra.moxin"
         github = "lexi933"
         instagram = "lexi_933/?hl=en"
-        medium = "https://medium.com/@Cnecct"
+        pinterest = "lexi933"
+        youtube = "results?search_query=alexandra+moxin"
+        homepage = "https://medium.com/@Alexandra933"
 
 
     [params.links]
