--- a/config.toml
+++ b/config.toml
@@ -66,7 +66,7 @@ spotify_subscribe = "https://open.spotify.com/show/4W4Lptk0ENfh7Wc1LKL3Zu"
 pocketcasts_subscribe = "https://play.pocketcasts.com/web#/podcasts/show/8e189720-0f3b-0135-ecbb-4114446340cb"
 #mailchimp_subscribe = "//arresteddevops.us3.list-manage.com/subscribe/post?u=5e4cbcac996bb9df25f970a89&amp;id=154fa76bcc"
 #rss_subscribe = "http://feed.com/myfeed" #only set this if you don't want to use the built-in feed
-description = "<p>The Advance Tech Podcast provides a spotlight for innovative and disruptive initiatives and features guests building the technology of tomorrow. Hosted by Alexandra Moxin and Adam Dymitruk.</p><p>We connect you to founders, developers and leaders from around the globe who give our audience insight into what it takes to massively scale from great idea to leading industry maker.</p><p>Subscribe from our homepage and check out our [commercial site](https://www.advancetechmedia.com/)"
+description = "<p>The Advance Tech Podcast provides a spotlight for innovative and disruptive initiatives and features guests building the technology of tomorrow. Hosted by Alexandra Moxin and Adam Dymitruk.</p><p>We connect you to founders, developers and leaders from around the globe who give our audience insight into what it takes to massively scale from great idea to leading industry maker.</p><p>Subscribe from our [homepage](https://advancetechmedia.org/) and check out new featured video episodes on [YouTube](https://www.youtube.com/channel/UCix6635bxEr4et8eO4QXSfg)."
   [params.feed]
     feed_copyright = "Copyright 2017 - 2020 Advance Tech Media" #do not use markdown in this field; it is used in the feed
     itunes_subtitle = "The voice of innovation and the tech of tomorrow." #no markdown or HTML
@@ -91,7 +91,7 @@ description = "<p>The Advance Tech Podcast provides a spotlight for innovative a
     #googleplus = "ArrestedDevOps"
     #pinterest = "nozzleio"
     instagram = "advance_tech_media"
-    youtube = "channel/UCo0YHhPVPBienDjnvqDrh1g"
+    youtube = "channel/UCix6635bxEr4et8eO4QXSfg"
 
 
   [params.authors]
@@ -118,7 +118,7 @@ description = "<p>The Advance Tech Podcast provides a spotlight for innovative a
       [params.authors.Alex.social]
         twitter = "Alexandra933"
         linkedin = "alexandra-moxin"
-        facebook = "alexandra.moxin"
+        facebook = "alexandra933"
         github = "lexi933"
         instagram = "lexi_933/?hl=en"
         pinterest = "lexi933"
